@startuml
' ============================
' Módulo: ingredients
' ============================
top to bottom direction
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package ingredients {
  class MyIngredientsViewModel
  class AddIngredientUseCase
  class DeleteIngredientUseCase
  class UpdateIngredientUseCase
  class GetIngredientsUseCase
  class GetCategoriesUseCase
  class GetUnitTypeUseCase
  class GetUserIngredientUseCase
  class GetCommonIngredientsUseCase
  class IsAdminUseCase
}

MyIngredientsViewModel --> AddIngredientUseCase
MyIngredientsViewModel --> DeleteIngredientUseCase
MyIngredientsViewModel --> UpdateIngredientUseCase
MyIngredientsViewModel --> GetIngredientsUseCase
MyIngredientsViewModel --> GetCategoriesUseCase
MyIngredientsViewModel --> GetUnitTypeUseCase
MyIngredientsViewModel --> GetUserIngredientUseCase
MyIngredientsViewModel --> GetCommonIngredientsUseCase
MyIngredientsViewModel --> IsAdminUseCase
@enduml


@startuml
' ============================
' Módulo: pantry
' ============================
top to bottom direction
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package pantry {
  class PantryIngredientsViewModel
  class GetUserPantryIngredientsUseCase
  class AddUserPantryIngredientUseCase
  class UpdateUserPantryIngredientUseCase
  class DeleteUserPantryIngredientUseCase
  class GetUserPantryIngredientByIngredientIdUseCase
}

PantryIngredientsViewModel --> GetUserPantryIngredientsUseCase
PantryIngredientsViewModel --> AddUserPantryIngredientUseCase
PantryIngredientsViewModel --> UpdateUserPantryIngredientUseCase
PantryIngredientsViewModel --> DeleteUserPantryIngredientUseCase
PantryIngredientsViewModel --> GetUserPantryIngredientByIngredientIdUseCase
@enduml


@startuml
' ============================
' Módulo: recipes
' ============================
top to bottom direction
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package recipes {
  class RecipeViewModel
  class MyPendingRecipesViewModel
  class MyRecipesScreenViewModel
  class MyFavoritesRecipesViewModel
  class GetCommonRecipesUseCase
  class AddRecipeUseCase
  class AddRecipeToFavoritesUseCase
  class RemoveRecipeFromFavoritesUseCase
  class AddRecipeToPendingUseCase
  class RemoveRecipeFromPendingUseCase
  class GetFavoritesRecipesUseCase
  class GetPendingRecipesUseCase
  class GetUserRecipeUseCase
  class DeleteRecipeUseCase
  class UpdateRecipeUseCase
  class MarkRecipeAsCookedUseCase
}

RecipeViewModel --> GetCommonRecipesUseCase
RecipeViewModel --> AddRecipeUseCase
RecipeViewModel --> AddRecipeToFavoritesUseCase
RecipeViewModel --> RemoveRecipeFromFavoritesUseCase
RecipeViewModel --> AddRecipeToPendingUseCase
RecipeViewModel --> RemoveRecipeFromPendingUseCase
RecipeViewModel --> GetFavoritesRecipesUseCase
RecipeViewModel --> GetPendingRecipesUseCase
RecipeViewModel --> GetUserRecipeUseCase
RecipeViewModel --> DeleteRecipeUseCase
RecipeViewModel --> UpdateRecipeUseCase
RecipeViewModel --> MarkRecipeAsCookedUseCase
@enduml


@startuml
' ============================
' Módulo: shopping
' ============================
top to bottom direction
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package shopping {
  class ShoppingListViewModel
  class MyShoppingHistoryViewModel
  class GetShoppingListsUseCase
  class AddShoppingListUseCase
  class AddIngredientToShoppingListUseCase
  class GetItemsForListUseCase
  class UpdateIngredientCheckedStatusUseCase
  class DeleteItemFromShoppingListUseCase
  class UpdateItemInShoppingListUseCase
  class SaveShoppingHistoryUseCase
  class GetRecentShoppingHistoryUseCase
  class DeleteShoppingHistoryByIdUseCase
  class GetItemsForHistoryUseCase
}

ShoppingListViewModel --> GetShoppingListsUseCase
ShoppingListViewModel --> AddShoppingListUseCase
ShoppingListViewModel --> AddIngredientToShoppingListUseCase
ShoppingListViewModel --> GetItemsForListUseCase
ShoppingListViewModel --> UpdateIngredientCheckedStatusUseCase
ShoppingListViewModel --> DeleteItemFromShoppingListUseCase
ShoppingListViewModel --> UpdateItemInShoppingListUseCase
ShoppingListViewModel --> SaveShoppingHistoryUseCase

MyShoppingHistoryViewModel --> GetRecentShoppingHistoryUseCase
MyShoppingHistoryViewModel --> DeleteShoppingHistoryByIdUseCase
MyShoppingHistoryViewModel --> GetItemsForHistoryUseCase
@enduml
